--- a/package.json
+++ b/package.json
@@ -17,21 +17,40 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "^2.39.0",
-    "class-variance-authority": "^0.7.0",
+    "@tiptap/extension-bubble-menu": "^2.12.0",
+    "@tiptap/extension-floating-menu": "^2.12.0",
+    "@tiptap/extension-highlight": "^2.12.0",
+    "@tiptap/extension-link": "^2.12.0",
+    "@tiptap/extension-placeholder": "^2.12.0",
+    "@tiptap/extension-task-item": "^2.12.0",
+    "@tiptap/extension-task-list": "^2.12.0",
+    "@tiptap/extension-text-align": "^2.12.0",
+    "@tiptap/extension-typography": "^2.12.0",
+    "@tiptap/extension-underline": "^2.12.0",
+    "@tiptap/pm": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
+    "@types/styled-components": "^5.1.34",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "cmdk": "^1.1.1",
     "daisyui": "^4.4.19",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.294.0",
     "mathjax-react": "^2.0.1",
-    "next": "14.0.4",
+    "nanoid": "^5.1.5",
+    "next": "^14.2.29",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactflow": "^11.10.1",
     "sonner": "^1.2.4",
+    "styled-components": "^6.1.18",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
